--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Str1ker Coach TV Network Instagram Post Frames</title>
+  <title>Str1ker Coach TV Network Instagram Post Frame with Image and Text Options</title>
   <style>
     /* General Reset */
     * {
@@ -46,37 +46,31 @@
       text-align: center;
       padding: 20px;
       transition: all 0.3s ease;
+      background-size: cover;
+      background-position: center;
     }
 
     /* Frame Styles */
     .frame.style1 {
-      background-color: #1a1a1a; /* Dark background */
       border: 15px solid #0077ff; /* Electric blue border */
-      color: #ffffff;
       font-family: 'Verdana', sans-serif;
     }
 
     .frame.style2 {
-      background-color: #101010;
       border: 10px double #ff3333; /* Red double border */
-      color: #f2f2f2;
       font-family: 'Helvetica', sans-serif;
     }
 
     .frame.style3 {
-      background-color: #2b2b2b;
       border: 12px solid transparent;
       border-image: linear-gradient(to right, #ff3333, #0077ff) 1;
-      color: #ffffff;
       font-family: 'Tahoma', sans-serif;
       font-style: italic;
     }
 
     .frame.style4 {
-      background-color: #161616;
       border: 8px solid #4d4d4d;
       border-radius: 10px;
-      color: #e0e0e0;
       font-family: 'Impact', sans-serif;
     }
 
@@ -103,19 +97,20 @@
     .text-line.top { top: 50px; }
     .text-line.bottom { bottom: 50px; }
 
-    .text-line::before, .text-line::after {
-      content: "⚽"; /* Soccer icon for Str1ker Coach */
-      margin: 0 10px;
-      font-size: 1.2em;
-      color: #ff3333;
-    }
-
     .quote {
       font-size: 2em;
       max-width: 80%;
       margin: 20px 0;
       line-height: 1.5;
       font-weight: bold;
+      padding: 10px;
+      border-radius: 5px;
+    }
+
+    /* Editable Text Background and Color */
+    .text-line, .quote {
+      color: #ffffff;
+      background-color: rgba(0, 0, 0, 0.5); /* Default semi-transparent background */
     }
   </style>
 </head>
@@ -129,9 +124,14 @@
       <option value="style3">Gradient Border</option>
       <option value="style4">Impact Dark Gray</option>
     </select>
+    <br>
+    <input type="color" id="fontColor" value="#ffffff" onchange="changeFontColor()" title="Choose Font Color">
+    <input type="color" id="bgColor" value="#000000" onchange="changeBgColor()" title="Choose Text Background Color">
+    <br>
     <input type="text" id="topText" placeholder="Enter top text...">
     <input type="text" id="quoteText" placeholder="Enter main quote...">
     <input type="text" id="bottomText" placeholder="Enter bottom text...">
+    <input type="file" id="backgroundImage" accept="image/*" onchange="addBackgroundImage(event)">
     <button onclick="downloadImage()">Download as Image</button>
   </div>
 
@@ -159,6 +159,22 @@
       frame.className = `frame ${selectedStyle}`;
     }
 
+    // Change Font Color
+    function changeFontColor() {
+      const color = document.getElementById('fontColor').value;
+      document.getElementById('topTextLine').style.color = color;
+      document.getElementById('quoteTextDisplay').style.color = color;
+      document.getElementById('bottomTextLine').style.color = color;
+    }
+
+    // Change Text Background Color
+    function changeBgColor() {
+      const color = document.getElementById('bgColor').value;
+      document.getElementById('topTextLine').style.backgroundColor = color;
+      document.getElementById('quoteTextDisplay').style.backgroundColor = color;
+      document.getElementById('bottomTextLine').style.backgroundColor = color;
+    }
+
     // Update Frame Text in Real-Time
     document.getElementById('topText').addEventListener('input', (e) => {
       document.getElementById('topTextLine').innerText = e.target.value;
@@ -169,6 +185,17 @@
     document.getElementById('bottomText').addEventListener('input', (e) => {
       document.getElementById('bottomTextLine').innerText = e.target.value;
     });
+
+    // Function to Add Background Image
+    function addBackgroundImage(event) {
+      const frame = document.getElementById('frame');
+      const file = event.target.files[0];
+      const reader = new FileReader();
+      reader.onload = () => {
+        frame.style.backgroundImage = `url(${reader.result})`;
+      };
+      reader.readAsDataURL(file);
+    }
 
     // Function to Download Frame as Image
     function downloadImage() {
@@ -183,3 +210,5 @@
 
 </body>
 </html>
+
+
